--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,36 @@
-streamlit==1.31.1
-plotly==5.21.0
-networkx==3.2.1
-pandas==2.2.2
-numpy==1.26.4
+ortools
+geopandas
+deap
+flask_cors
+flask_sqlalchemy
+yfinance
+streamlit_folium
+folium
+networkx
+pulp
+statsmodels
+lightgbm
+numpy
+pandas
+matplotlib
+scikit-learn
+pmdarima
+prophet
+tensorflow
+c_intgrt_vec
+convertdate
+plotly
+python-docx
+xlrd
+waitress
+scipy
+openpyxl
+seaborn
+pyqt5
+python-pptx
+tabulate
+pyinstaller
+requests
+pathlib
+urllib3
+reportlab
